# serde

./: Cargo.toml
serde_derive/: Cargo.toml
serde_derive/src/: lib.rs
serde_derive_watt/: Cargo.toml
serde_derive_watt/src/: lib.rs
test_suite/: Cargo.toml
